style: apply `spotlessApply` to format with new format rule